@@ -238,10 +238,6 @@
     margin-right: 16px;
 }
 
-#scripts-navigator-tabbed-pane .tabbed-pane-content {
-    margin-top: 1px;
-}
-
 #scripts-editor-container-tabbed-pane .tabbed-pane-header {
     background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#F5F5F5), to(#E5E5E5));
 }
@@ -251,8 +247,8 @@
     margin-right: 16px;
 }
 
-#scripts-editor-container-tabbed-pane .tabbed-pane-content {
-    margin-top: 1px;
+#scripts-editor-container-tabbed-pane .tabbed-pane-header-tab {
+    border-bottom: 1px solid #BBB;
 }
 
 .scripts.panel .navigator li {
